removing drupal/component from modules/custom and re-adding it using Composer

--- a/web/modules/custom/custom_tableau/custom_tableau.info.yml
+++ b/web/modules/custom/custom_tableau/custom_tableau.info.yml
@@ -3,3 +3,5 @@ description: "This is custom tableau"
 type: module
 core: 8.x
 core_version_requirement: ^8 || ^9 || ^10
+dependencies:
+  - drupal:component
