--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "pantheon-systems/drupal-integrations": "^9",
         "cweagans/composer-patches": "^1.7",
         "drush/drush": "^11.6",
-        "drupal/devel": "^5.1"
+        "drupal/devel": "^5.1",
+        "drupal/component": "^1.0@RC"
     },
     "require-dev": {
         "drupal/core-dev": "^9.2"
